css/main.css
/*****************************************************************************/
/*
/* Common
/*
/*****************************************************************************/

/* Global Reset */
* {
  margin: 0;
  padding: 0;
}

html, body { height: 100%; }

body {
  background: #EFEFEF;
  font: 13.34px;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: small;
  text-align: center;
}

h1, h2, h3, h4, h5, h6 {
  font-size: 100%;
}

p { margin: 0 0 1em 0; }

a         {
  color: #0000bb;
  text-decoration: none;
}
a:hover   {
  color: #000;
}

/*****************************************************************************/
/*
/* Site
/*
/*****************************************************************************/

.site {
  background: #FFF;
  margin: auto;
  font-size: 115%;
  text-align: justify;
  line-height: 1.5em;
  max-width: 1200px;
}

.header {
  box-sizing: border-box;
  margin: auto;
  padding: 1em 4em;
  color: #000;
}

.header a {
  font-weight: bold;
  text-decoration: none;
}

.title {
  display: inline-block;
}

.title a {
  color: #000099;;
}

.header a.extra {
  color: #777;
  margin-left: 1em;
}

.header a.extra:hover,
.header a.active {
  color: #000;
}

.meta {
  color: #aaa;
}

.content {
  padding: 1em 4em;
  margin: auto;
}

.content-section {
  padding: 0.5em 0;
}

section {
  border-bottom: 1px solid #DDD;
}

.section-header {
  font-size: 2em;
  line-height: 1em;
  margin: 0.5em 0;
}

.subsection-header {
  font-size: 1.3em;
  line-height: 1em;
  margin-bottom: 0.8em;
}

.footer {
  font-size: 80%;
  color: #666;
  overflow: hidden;
  margin: 0 auto;
  padding: 1em;
  display: flex;
  justify-content: center;
}

.footer .contact {
  margin-right: 3em;
}

.footer .contact a {
  color: #8085C1;
}

.footer .rss {
  margin-top: 1.1em;
  margin-right: -.2em;
  float: right;
}

.footer .rss img {
  border: 0;
}

@media only screen and (max-width: 1100px) {
  .header {
    padding: 1em;
  }
  .content {
    padding: 1em;
  }
}
/*****************************************************************************/
/*
/* Home
/*
/*****************************************************************************/

.profile-section {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  padding-bottom: 1.5em;
}

.name-intro {
  font-size: 2em;
  line-height: 1em;
  margin: 0.4em 0.1em 0 0.1em;
}

.name {
  font-size: 4em;
  line-height: 1.5em;
}

.profile-picture {
  height: 400px;
}

.profile-text {
  box-sizing: border-box;
  padding: 1em 3em;
  min-width: 320px;
  width: 60%;
}

@media only screen and (max-width: 1100px) {
  .profile-section {
    justify-content: center;
  }
  .profile-text {
    padding: 1em 0;
    width: 100%;
  }
}

/*****************************************************************************/
/*
/* Research
/*
/*****************************************************************************/

.list {
  list-style-position: inside;
  padding-bottom: 1em;
}

/*****************************************************************************/
/*
/* Publications
/*
/*****************************************************************************/

.book-tile {
  display: flex;
  flex-wrap: wrap;
  margin: 3em 0 0 0;
}

.book-img-container {
  width: 20%;
  border-right: solid 1px #ccc;
}

.book-desc-container {
  width: 75%;
  padding: 0 1em;
}

.book-img-container img {
  display: block;
  max-height: 220px;
}

.book-link:hover {
  color: black;
}

@media only screen and (max-width: 1100px) {
  .book-img-container {
    width: initial;
    border: none;
  }

  .book-desc-container {
    width: 100%;
    padding: 1.5em 0 0 0;
  }

  .book-tile {
    padding-bottom: 1em;
    border-bottom: 1px solid #ccc;
  }

  .book-tile:last-child {
    border: none;
  }
}

